# PhaseTracer

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CITATION.bib  CMakeLists.txt  ChangeLog.md  LICENSE  README.md  README.rst  README_for_xSM.md  Z2ScalarSingletModel_Results.txt  run.sh  test.py
EffectivePotential/: .gitignore  CMakeLists.txt  README.md
EffectivePotential/example/: CMakeLists.txt  Z2_scalar_singlet.cpp  simplified_2d.cpp
EffectivePotential/include/effectivepotential/: autodiff_potential.hpp  logger.hpp  one_loop_potential.hpp  potential.hpp  pow.hpp  property.hpp  thermal_function.hpp  thermal_function_tables.hpp
EffectivePotential/include/models/: 1D_test_model.hpp  2D_test_model.hpp  BSMPT.hpp  BminusL.hpp  ConcurrentThreePhaseTransition_scaled.hpp  RSS.hpp  RSS_HT.hpp  RSS_old.hpp  SM_parameters.hpp  SubcriticalTransitionExample.hpp  ToyModel.hpp  Z2_scalar_singlet_model.hpp  supercool_model.hpp  xSM_HT.hpp  xSM_MSbar.hpp  xSM_MSbar_covariant.hpp  xSM_MSbar_noZ2.hpp  xSM_MSbar_solver.hpp  xSM_OSlike.hpp  xSM_base.hpp
EffectivePotential/src/: CMakeLists.txt  autodiff_potential.cpp  one_loop_potential.cpp  potential.cpp  thermal_function.cpp
example/: CMakeLists.txt  covariant_gauge.cpp  data.txt  h_bar_expansion.cpp  msbar.cpp  run_1D_test_model.cpp  run_2D_test_model.cpp  run_BL_low.cpp  run_BminusL.cpp  run_ConcurrentThreePhaseTransition_scaled.cpp  run_RSS.cpp  run_SubcriticalTransitionExample.cpp  run_ToyModel.cpp  run_supercool.cpp  run_xSM_msbar_noZ2_model.cpp  scan_Z2_scalar_singlet_model.cpp  test_file_reading.cpp  test_symmetry.cpp  test_tree_ewsb.cpp  time.cpp
example/BSMPT_models/: CMakeLists.txt  run_C2HDM.cpp  run_N2HDM.cpp  run_R2HDM.cpp
example/DRalgo/: CMakeLists.txt  DRalgo_ah.hpp  DRalgo_xSM.hpp  DRalgo_xSM_nnlo.hpp  comp_plot.py  grid_scan.py  run_DRalgo_ah.cpp  run_DRalgo_xSM.cpp
example/ForBubbleProfiler/: CMakeLists.txt  run_BP_2d.cpp  run_BP_scale.cpp
example/ScalarSingletZ2DM/: CMakeLists.txt  ScalarSingletZ2DM.hpp  run_ScalarSingletZ2DM.cpp
example/ScalarSingletZ2DMEFTHiggs/: CMakeLists.txt  ScalarSingletZ2DMEFTHiggs.hpp  run_ScalarSingletZ2DMEFTHiggs.cpp
example/ScalarSingletZ2DMEWSBoutputlamHEFTHiggs/: CMakeLists.txt  ScalarSingletZ2DMEWSBoutputlamHEFTHiggs.hpp  run_ScalarSingletZ2DMEWSBoutputlamHEFTHiggs.cpp
example/ScalarSingletZ2DMMhInput/: #run_ScalarSingletZ2DM.cpp#  CMakeLists.txt  ScalarSingletZ2DMMhInput.hpp  ScalarSingletZ2DMMhInput_withSingletVEVinPT.hpp  run_ScalarSingletZ2DMMhInput.cpp  run_ScalarSingletZ2DMMhInput_withSingletVEVinPT.cpp
example/ScalarSingletZ2DMMhInputMsInput/: CMakeLists.txt  SM_parameters.hpp  ScalarSingletZ2DMMhInputMsInput_withSingletVEVinPT.hpp  run_ScalarSingletZ2DMMhInputMsInput_withSingletVEVinPT.cpp  run_ScalarSingletZ2DMMhInputMsInput_withSingletVEVinPT_PRM.cpp
example/SingletDM/: CMakeLists.txt  SingletDM.hpp  run_SingletDM.cpp
example/THDM/: CMakeLists.txt  THDM.hpp  run_THDM.cpp
example/THDMIISNMSSMBCsimple/: CMakeLists.txt  THDMIISNMSSMBCsimple.hpp  run_THDMIISNMSSMBCsimple.cpp
example/TestBubbleProfiler/: BP_2d.hpp  BP_scale.hpp  CMakeLists.txt  myplot.py  run_BP_2d.cpp  run_BP_scale.cpp
example/TestDeepPhase/: CMakeLists.txt  DP_xSM.hpp  DRalgo_2HDM.hpp  DRalgo_IDM.hpp  modelParams_xSM.json  run_3deft_eos.cpp  run_DP_xSM.cpp  run_full_gw_scan.cpp  run_ht_eos.cpp  run_idm_eos.cpp  run_msbar_eos.cpp
example/TestDeepPhase/helperIncludes/: complex_operators.hpp  gwTools.hpp  wallGoWrapper.hpp
example/TestPathDeformation/: run_pathdeformation_2d.cpp  run_pathdeformation_BP_2d.cpp  run_shooting_1d.cpp
example/TestShooting/: CMakeLists.txt  run_pathdeformation_2d.cpp  run_pathdeformation_BP_2d.cpp  run_shooting_1d.cpp
example/xSM/: 1d_goldstone_catastrophe.py  1d_plot.py  1d_plot_mu.py  1d_plot_xi.py  CMakeLists.txt  README_for_xSM.md  Readme.txt  compare.py  compare_mu.py  compare_xi.py  compare_xi_2d.py  compare_xi_3d.py  grid_scan.py  plot_fun.py  random_scan.py  run_xSM_HT.cpp  run_xSM_MSbar.cpp  run_xSM_OSlike.cpp  run_xSM_PRM.cpp  run_xSM_covariant_gauge.cpp  scan.py  scan_scale_T.py
example/xSM/1d_bks/: Rxi_HT_zoom_in.txt  Rxi_MSbar.txt  Rxi_MSbar_1L_EWSB.txt  Rxi_MSbar_1L_EWSB_zoom_in.txt  Rxi_MSbar_no.txt  Rxi_MSbar_no_zoom_in.txt  Rxi_MSbar_resummation.txt  Rxi_MSbar_zoom_in.txt  Rxi_PRM.txt  Rxi_PRM_0L.txt  Rxi_PRM_0L_daisy.txt  Rxi_PRM_0L_resum.txt  Rxi_PRM_0L_resum_zoom_in.txt  Rxi_PRM_0L_zoom_in.txt  Rxi_PRM_FS_0L.txt  Rxi_PRM_zoom_in.txt  covariant_MSbar.txt  covariant_MSbar_1L_EWSB.txt  covariant_MSbar_1L_EWSB_zoom_in.txt  covariant_MSbar_no.txt  covariant_MSbar_no_zoom_in.txt  covariant_MSbar_zoom_in.txt  covariant_PRM.txt  covariant_PRM_0L.txt  covariant_PRM_0L_daisy.txt  covariant_PRM_0L_resum.txt  covariant_PRM_0L_resum_zoom_in.txt  covariant_PRM_0L_zoom_in.txt  covariant_PRM_zoom_in.txt  lambda_hs_05T.txt  lambda_hs_05mt.txt  lambda_hs_1L_EWSB.txt  lambda_hs_2mt.txt  lambda_hs_2piT.txt  lambda_hs_HT.txt  lambda_hs_OSlike.txt  lambda_hs_PRM_05.txt  lambda_hs_PRM_05mt.txt  lambda_hs_PRM_0L_05T.txt  lambda_hs_PRM_0L_05mt.txt  (+205 more)
example/xSM/2d_scan/: lhs_ls_05mt.txt  lhs_ls_2mt.txt  lhs_ls_OSlike.txt  lhs_ls_Parwani.txt  lhs_ls_default.txt  lhs_ls_xi15.txt  lhs_ls_xi25.txt  lhs_ls_xi3.txt  lhs_ls_xi50.txt  ms_lhs_05mt.txt  ms_lhs_2mt.txt  ms_lhs_OSlike.txt  ms_lhs_Parwani.txt  ms_lhs_default.txt  ms_lhs_xi15.txt  ms_lhs_xi25.txt  ms_lhs_xi3.txt  ms_lhs_xi50.txt  ms_ls_05mt.txt  ms_ls_2mt.txt  ms_ls_OSlike.txt  ms_ls_Parwani.txt  ms_ls_default.txt  ms_ls_xi15.txt  ms_ls_xi25.txt  ms_ls_xi3.txt  (+1 more)
src/: CMakeLists.txt  GravWaveCalculator.cpp  equation_of_state.cpp  false_vacuum_decay_rate.cpp  gravwave_calculator.cpp  h_bar_expansion.cpp  path_deformation.cpp  phase_finder.cpp  shooting.cpp  temporary.cpp  thermal_legacy.cpp  thermal_parameters.cpp  thermo_finder.cpp  transition_finder.cpp  transition_graph_util.cpp  transition_metrics.cpp
unit_tests/: CMakeLists.txt  catch_main.cpp  test_find_phases.cpp  test_find_transitions.cpp  test_gravwave_calculator.cpp  test_h_bar_expansion.cpp  test_potential.cpp  test_tadpoles.cpp
(+869 files in other folders)
